--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,5 +1,6 @@
 html ,body {
     height: 100%;
+    max-width: 100%;
 }
 
 body {
@@ -23,6 +24,10 @@ body {
     letter-spacing: 1.3px;
 }
 
+.row {
+    --bs-gutter-x: none;
+}
+
 .app-navbar-brand::first-letter {
     background-color: rgb(38, 0, 255);
     padding: 5px;
@@ -38,4 +43,122 @@ body {
 
 .app-navbar-item:hover {
     color: rgb(90, 90, 90) !important;
+}
+
+.welcome-section {
+    background-color: #7a54db;
+    color: #ffffff;
+    max-width: 100%;
+}
+
+.welcome-section-header-text-container {
+    display: flex;
+    justify-content: center;
+}
+
+.welcome-section-header-text {
+    font-weight: 700;
+    font-size: 7.126rem;
+    text-align: left;
+    word-wrap: break-word;
+    position: relative;
+    max-width: 49%;
+}
+
+.welcome-section-paragraph-text-container {
+    max-width: 49%;
+    padding: 30px 30px 30px 189px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.welcome-section-paragraph-text {
+    font-weight: 600;
+    position: relative;
+    display: table;
+    align-self: flex-end;
+
+}
+
+.services-section {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.services-section-header-container {
+    margin-top: 50px;
+    text-align: center;
+}
+
+.services-section-header {
+    font-size: 50px;
+    font-weight: 900;
+}
+
+.services-section-row {
+    display: flex;
+    justify-content: space-around;
+}
+
+.services {
+    padding: 150px;
+}
+
+.service-container{
+    text-align: center;
+    background-color: #7a54db;
+    padding: 100px 50px;
+}
+
+.service-badge {
+    font-size: 50px;
+    color: #7a54db;
+    background-color: #fff;
+    border-radius: 50%;
+    padding: 6px;
+}
+
+.service-container-header {
+    letter-spacing: 6px;
+    color: #fff;
+    margin-top: 9px;
+}
+
+.service-btn {
+    text-transform: uppercase;
+    margin-top: 50px;
+    border: 1px solid gray;
+    width: auto;
+    font-weight: 600;
+    color: #333;
+    letter-spacing: 6px;
+    text-align: center;
+}
+
+.service-btn:hover {
+    background-color: #333;
+    border-color: #333;
+    color: #ffffff;
+}
+
+.service-about-us-header {
+    color: #9999;
+    font-size: 32px;
+}
+
+.service-about-us-description {
+    word-wrap: break-word;
+    font-size: 1.25rem;
+    text-align: center;
+    font-weight: 600;
+    position: relative;
+}
+
+.service-about-us {
+    background-color: transparent !important;
+    padding: 100px 0;
+}
+
+.second-services-row {
+    margin-top: 25px;
+    justify-content:space-evenly;
 }
