feat: implement and design footer template

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -49,6 +49,7 @@ body {
     background-color: #7a54db;
     color: #ffffff;
     max-width: 100%;
+    padding: 100px 0;
 }
 
 .welcome-section-header-text-container {
