--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -163,3 +163,88 @@ body {
     margin-top: 25px;
     justify-content:space-evenly;
 }
+
+.preview-section {
+    background-color: #7a54db;
+    color: #fff;
+    padding-top: 25px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.preview-row {
+    margin-top: 50px;
+}
+
+.preview-first-col {
+    text-align: center;
+    padding: 0 20px 20px 0;
+    text-transform: uppercase;
+    border: 1px solid silver;
+    border-left: none;
+    border-bottom: none;
+}
+
+.preview-second-col {
+    padding: 0 0 20px 20px;
+    text-transform: uppercase;
+    border: 1px solid silver;
+    border-right: none;
+    border-bottom: none;
+    border-left: none;
+    text-align: center;
+}
+
+.preview-btn {
+    border: 1px solid gray;
+    width: auto;
+    font-weight: 600;
+    color: #333;
+    letter-spacing: 6px;
+    text-align: center; 
+}
+
+.preview-btn:hover {
+    background-color: #333;
+    border-color: #333;
+    color: #ffffff;
+}
+
+.departments {
+    padding: 50px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.departments-header {
+    font-size: 50px;
+    font-weight: 900;
+}
+
+.department {
+    text-align: center;
+    padding: 20px;
+    border: 10px solid transparent;
+    border-image: linear-gradient(#7a54db , #b418db);
+    -moz-border-image: -moz-linear-gradient(#7a54db , #b418db);
+    -webkit-border-image: -webkit-linear-gradient(#7a54db , #b418db);
+    border-image-slice: 1;
+    transition: 0.5s ease-out;
+    -moz-transition: 0.5s ease-out;
+    -o-transition: 0.5s ease-out;
+    -webkit-transition: 0.5s ease-out;
+    margin-right: 50px;
+    margin-bottom: 50px;
+}
+
+.department:hover {
+    background-image: linear-gradient(#7a54db , #b418db);
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+}
+
+.departments-row {
+    margin-top: 60px;
+    justify-content: space-evenly;
+}
+
